plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.5'
}

application {
    mainClassName = "org.openjfx.MainApp"
}

repositories {
    mavenCentral()
}

version 'ALPHA-SNAPSHOT'

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    // For dotenv files
    compile 'io.github.cdimascio:java-dotenv:3.1.7'
    // Smack! (XMPP)
    compile 'org.igniterealtime.smack:smack-java7:4.3.0'
    // Optional for XMPPTCPConnection
    compile 'org.igniterealtime.smack:smack-tcp:4.3.0'
    // Optional for XMPP extensions support
    compile 'org.igniterealtime.smack:smack-extensions:4.3.0'
    // https://mvnrepository.com/artifact/javax.validation/validation-api
    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'

}

javafx {
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

mainClassName = "org.openjfx.MainApp"

run {
    standardInput = System.in
}

jar {
    archiveName = "coco_whisper.jar"

    from {

        configurations.runtime.collect {
            it.isDirectory() ? it : zipTree(it)
        }

        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }

    manifest {
        attributes 'Main-Class': 'org.openjfx.CocoWhisper'
    }

    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
}
